update recipe